[build-system]
# Define build dependencies and backend
requires = ["setuptools>=61", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[project]
name = "torchsig"
description = "Signal Processing Machine Learning Toolkit"
authors = [
    {name = "TorchSig Team"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["signal processing", "machine learning"]
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
# Runtime dependencies
dependencies = [
    # Core Libraries
    "torch",
    "torchaudio",
    "lightning",
    "tqdm",
    "numpy>=2",
    "scipy",
    "h5py",
    "matplotlib",
    "PyYAML",
    "opencv-python>=4.10",
    # Testing, CI/CD
    "pytest",
    "pylint",
    "pytest-cov",
    "ruff",
]


[project.urls]
Homepage = "https://torchsig.com/"
Documentation = "https://torchsig.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/TorchDSP/torchsig.git"
Issues = "https://github.com/TorchDSP/torchsig/issues"

[tool.setuptools.packages.find]
# Automatically find all packages starting in root directory
where = ["."]

[tool.setuptools.dynamic]
# Dynamically read version from torchsig.__version__
version = {attr = "torchsig.__version__"}

[[tool.setuptools-rust.ext-modules]]
# Define the Rust extension module built with PyO3
target = "torchsig.utils.rust_functions"  # Must match import path and lib.name in Cargo.toml
path = "rust_functions/Cargo.toml"        # Path to Cargo.toml
binding = "PyO3"                          # Bindings to use
debug = false                             # Enable release mode for optimized builds
optional = false                          # Crash if the extension build fails

[tool.coverage.run]
branch = true
source = ["torchsig"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = []

[tool.pytest.ini_options]
# Configure pytest behavior and test discovery
addopts = "--cov=torchsig --cov-report=xml --cov-report=term-missing --junitxml=report.xml"
testpaths = ["tests"]

[tool.ruff]
# Same line length as Black (200)
line-length = 200
target-version = "py310"
exclude = ["docs", "rust_functions"]

[tool.ruff.lint]
# Enable all rules by default
select = ["ALL"]
# Ignore specific rules that don't apply to your project
ignore = [
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "B006", # Do not use mutable data structures for argument defaults
    "E501",  # Line too long (handled by line-length)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D204", # 1 blank line required after class docstring
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D413", # Missing blank line after last section
    "D415", # First line should end with a period, question mark, or exclamation point
    "D417", # Missing argument description in the docstring for `__init__`: `**kwargs`
    "C901",  # Function too complex
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLW2901",  # Redefined loop name
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "TRY003", # external messages in exceptions are too verbose
    "FIX002",  # Line contains TODO
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "E722", # Do not use bare `except`
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "G004",  # Logging statement uses f-string
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals
    "D203",  # One blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "T201", # `print` found
]

[tool.ruff.format]
# Enable auto-formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules for test files
"tests/*" = [
    "S101",  # Use of assert
    "PLR2004",  # Magic value used in comparison
    "ARG001",  # Unused function argument
    "D103",  # Missing docstring in public function
]