[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "torchsig"
description = "Signal Processing Machine Learning Toolkit"
version = "2.1.0"
authors = [
    { name = "TorchSig Team" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["signal processing", "machine learning"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core runtime dependencies
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "pandas",
    "PyWavelets>=1.5.0",
    "scikit-learn>=1.3.0",
    "timm>=0.9.0",
    "lightning>=2.0.0,<3.0.0",
    "ultralytics==8.3.57",
    "torchinfo>=1.4.0",
    "sigmf>=1.1.0",
    "numcodecs==0.13.1",
    "opencv-python>=4.10.0",
    "jupyter_bbox_widget>=0.5.0",
    "PyYAML>=6.0",
]

# Optional dependency groups
[project.optional-dependencies]
docs = [  # TODO: migrate this to uv's [dependency-groups] after switching from rtd to mkdocs
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "better-apidoc>=0.3.2",
    "recommonmark>=0.7.1",
    "numba>=0.58.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "ty>=0.0.1a15",
]

[project.urls]
Homepage = "https://torchsig.com/"
Documentation = "https://torchsig.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/TorchDSP/torchsig.git"
Issues = "https://github.com/TorchDSP/torchsig/issues"

[tool.maturin]
python-source = "src"
module-name = "torchsig.utils.rust_functions"
python-packages = ["torchsig"]
include = [
    "src/torchsig/datasets/default_configs/*.yaml",
    "src/torchsig/datasets/default_configs/*.md",
]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["torchsig"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# pytest configuration
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow' --cov=torchsig --cov-report=xml --cov-report=term-missing --junitxml=report.xml"
testpaths = ["tests"]

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "rust",
    ".venv",
    ".uv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["torchsig"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
